--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url=jdbc:mysql://localhost/luigi?useSSL=false
-spring.datasource.username=cursist 
+spring.datasource.url=jdbc:mysql://localhost/pizzaluigi?useSSL=false
+spring.datasource.username=cursist
 spring.datasource.password=cursist
