--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost/pizzaluigi?useSSL=false
 spring.datasource.username=cursist
 spring.datasource.password=cursist
+ecbKoersURL=https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml
+fixerKoersURL=http://data.fixer.io/api/latest?access_key=b2b79c3063c0422bf187b752992c0116&symbols=USD
 server.port=8090
