--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/pizzaluigi?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/luigi?useSSL=false
 spring.datasource.username=cursist
 spring.datasource.password=cursist
 ecbKoersURL=https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml
