--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=cursist
 logging.level.org.springframework.jdbc.core.JdbcTemplate=DEBUG
 logging.level.org.springframework.jdbc.core.simple.SimpleJdbcInsert=DEBUG
 logging.level.org.springframework.jdbc.core.StatementCreatorUtils=TRACE
+server.servlet.session.tracking-modes=cookie
 ecbKoersURL=https://www.ecb.europa.eu/stats/eurofxref/eurofxref-daily.xml
 fixerKoersURL=http://data.fixer.io/api/latest?access_key=b2b79c3063c0422bf187b752992c0116&symbols=USD
 server.port=8090
